--- a/src/main/resources/templates/emailVerificationCode.html
+++ b/src/main/resources/templates/emailVerificationCode.html
@@ -85,7 +85,8 @@
 <div class="container">
     <div class="header">Your Verification Code</div>
     <div class="message">
-        Please use the verification code below to complete your account verification. This code will expire in 10 minutes.
+        Please use the verification code below to complete your account verification. This code will expire in 10 minutes.<br><br>
+        <strong>Note: The verification code is also included in the email subject line for easy access.</strong>
     </div>
     <div class="verification-code">[VERIFICATION_CODE]</div>
     <div class="footer">
